--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-PORT =4000
-MONGODB = "mongodb+srv://jairock7776:007007007@cluster0.4bewf.mongodb.net/e-commerce"
+
+MONGODB_URI = "mongodb+srv://jairock7776:007007007@cluster0.4bewf.mongodb.net/e-commerce"
